Implement add/edit leave time in timelist (#448)
* Add new table cells

* Implement editing of date range and comment

* Remove redundant files

* Add trackBy to Table component

* Refactor AddLeaveTime component

* Add ability to create leave time in timelist

* Add new tooltip for changed worktime

* Make date range cell match the design

* Make EditableTime cell match the design

* Create SharedTimeTrackingSystem module

* Split Attendance service into multiple with each own logic

* Add holidays and reserved days to EditableDateRange component in Timelist

* Add confirm dialog to editable cells

* Add logic for creating leave times

* Update Time Service

* Correctly update hours in worktime based on user id
