# src/app/modules/manager-timelist/models/user-stat.ts
@@ -1,10 +1,13 @@
-import { UserStatInfo } from '@api/time-service/models/user-stat-info';
-import { ImageInfo } from '@app/models/image.model';
-import { WorkTimeInfo } from '@api/time-service/models/work-time-info';
-import { LeaveTimeInfo } from '@api/time-service/models/leave-time-info';
-import { WorkTimeMonthLimitInfo } from '@api/time-service/models/work-time-month-limit-info';
-import { LeaveType } from '@api/time-service/models/leave-type';
 import { DateTime } from 'luxon';
+import {
+	LeaveTimeInfo,
+	LeaveType,
+	ProjectInfo,
+	UserStatInfo,
+	WorkTimeInfo,
+	WorkTimeMonthLimitInfo,
+} from '@api/time-service/models';
+import { ImageInfo } from '@app/models/image.model';
 import { TimeDuration } from '@app/services/time-duration.service';
 
 interface UserInfo {
@@ -22,47 +25,88 @@ interface CompanyInfo {
 	contractName?: string;
 }
 
-export class LeaveTime {
-	public id: string;
-	public leaveType: LeaveType;
-	public comment?: string;
-	public startDate: DateTime;
-	public endDate: DateTime;
-	public hours: number;
+export interface LeaveTime {
+	id: string;
+	leaveType: LeaveType;
+	comment?: string;
+	startDate: DateTime;
+	endDate: DateTime;
+	hours: number;
+}
 
-	constructor(lt: LeaveTimeInfo, monthLimit: WorkTimeMonthLimitInfo, rate: number) {
-		this.id = lt.id;
-		this.leaveType = lt.leaveType;
-		this.comment = lt.comment;
-		this.startDate = DateTime.fromISO(lt.startTime as string);
-		this.endDate = DateTime.fromISO(lt.endTime as string);
-		this.hours = this.countHours(monthLimit, rate);
+export class LeaveTimeFactory {
+	public static create(lt: LeaveTimeInfo, monthLimit: WorkTimeMonthLimitInfo, rate: number): LeaveTime {
+		const startDate = DateTime.fromISO(lt.startTime as string);
+		const endDate = DateTime.fromISO(lt.endTime as string);
+		return {
+			id: lt.id,
+			leaveType: lt.leaveType,
+			comment: lt.comment,
+			startDate,
+			endDate,
+			hours: this.countHours({ startDate, endDate }, monthLimit, rate),
+		};
 	}
 
-	private countHours(monthLimit: WorkTimeMonthLimitInfo, rate: number): number {
-		let startDate = this.startDate;
-		let endDate = this.endDate;
-		if (this.startDate.month !== monthLimit.month || this.startDate.year !== monthLimit.year) {
+	public static countHours(
+		interval: {
+			startDate: DateTime;
+			endDate: DateTime;
+		},
+		monthLimit: WorkTimeMonthLimitInfo,
+		rate: number
+	): number {
+		let startDate = interval.startDate;
+		let endDate = interval.endDate;
+		if (interval.startDate.month !== monthLimit.month || interval.startDate.year !== monthLimit.year) {
 			startDate = DateTime.fromObject({ month: monthLimit.month, year: monthLimit.year }).startOf('month');
 		}
-		if (this.endDate.month !== monthLimit.month || this.endDate.year !== monthLimit.year) {
+		if (interval.endDate.month !== monthLimit.month || interval.endDate.year !== monthLimit.year) {
 			endDate = DateTime.fromObject({ month: monthLimit.month, year: monthLimit.year }).endOf('month');
 		}
 		const holidays = monthLimit.holidays.split('').map(Number).map(Boolean);
 		return TimeDuration.getDuration({ startDate, endDate }, 8 * rate, this.filterWeekends.bind(this, holidays));
 	}
 
-	private filterWeekends(holidays: boolean[], date: DateTime): boolean {
+	private static filterWeekends(holidays: boolean[], date: DateTime): boolean {
 		return holidays.length
 			? holidays.every((isHoliday: boolean, day: number) => (isHoliday ? date.day !== day + 1 : true))
 			: date.weekday !== 6 && date.weekday !== 7;
 	}
 }
 
+export interface WorkTime {
+	id: string;
+	userHours: number;
+	description?: string;
+	user: UserInfo;
+	managerHours?: number;
+	managerDescription?: string;
+	manager?: UserInfo;
+	modifiedAtUtc?: string;
+	project?: ProjectInfo;
+}
+
+export class WorkTimeFactory {
+	public static create(wt: WorkTimeInfo, user: UserInfo): WorkTime {
+		return {
+			id: wt.id,
+			userHours: wt.userHours || 0,
+			description: wt.description,
+			user,
+			managerHours: wt.managerHours,
+			managerDescription: wt.managerDescription,
+			manager: wt.manager,
+			modifiedAtUtc: wt.modifiedAtUtc,
+			project: wt.project,
+		};
+	}
+}
+
 export class UserStat {
 	public user: UserInfo;
 	public companyInfo: CompanyInfo;
-	public workTimes: WorkTimeInfo[];
+	public workTimes: WorkTime[];
 	public leaveTimes: LeaveTime[];
 	public limitInfo: WorkTimeMonthLimitInfo;
 
@@ -73,9 +117,9 @@ export class UserStat {
 			contractName: data.companyUser?.contractSubject?.name,
 		};
 		this.limitInfo = data.limitInfo as WorkTimeMonthLimitInfo;
-		this.workTimes = data.workTimes;
+		this.workTimes = data.workTimes.map((wt: WorkTimeInfo) => WorkTimeFactory.create(wt, this.user));
 		this.leaveTimes = data.leaveTimes
 			.filter((lt: LeaveTimeInfo) => lt.isActive)
-			.map((lt: LeaveTimeInfo) => new LeaveTime(lt, this.limitInfo, this.companyInfo.rate));
+			.map((lt: LeaveTimeInfo) => LeaveTimeFactory.create(lt, this.limitInfo, this.companyInfo.rate));
 	}
 }
